returning dummy value

--- a/vignettes/dtypes.Rmd
+++ b/vignettes/dtypes.Rmd
@@ -14,11 +14,6 @@ knitr::opts_chunk$set(
 )
 ```
 
-```{r debugging-todo}
-library(blosc)
-dtype_to_r(as.raw(c(0x7f, 0x7e, 0x7b, 0x01)), "|u1")
-```
-
 ## What are Data Types (and Why Should You Care?)
 
 A data type is a description of how information is stored digitally and in which format.
@@ -103,12 +98,12 @@ Some examples of encoding r data to dtypes
 
 ```{r encoding}
 library(blosc)
-# r_to_dtype(c(TRUE, FALSE), "|b1")
-# r_to_dtype(1L:4L, "|u1")
-# r_to_dtype(c(1.4, 9.8e-6), "<f8")
-# r_to_dtype(1+1i, "<c16")
-# r_to_dtype(as.POSIXct("2023-06-23 15:32:19", tz = "UTC"), "<M8[ms]")
-# r_to_dtype(as.difftime(1, units = "weeks"), "<m8[D]")
+r_to_dtype(c(TRUE, FALSE), "|b1")
+r_to_dtype(1L:4L, "|u1")
+r_to_dtype(c(1.4, 9.8e-6), "<f8")
+r_to_dtype(1+1i, "<c16")
+r_to_dtype(as.POSIXct("2023-06-23 15:32:19", tz = "UTC"), "<M8[ms]")
+r_to_dtype(as.difftime(1, units = "weeks"), "<m8[D]")
 ```
 
 ## Precision of Types
@@ -124,13 +119,13 @@ Some examples where you will lose precision:
 
 ```{r precision, eval=FALSE}
 ## Encoding numeric (64 bit) as a 16 bit float:
-# r_to_dtype(0.123, "<f2") |>
-#   dtype_to_r("<f2")
+r_to_dtype(0.123, "<f2") |>
+  dtype_to_r("<f2")
 
 ## Encoding a date-time object in whole hours
 ## as opposed to a floating point of seconds
-# r_to_dtype(as.POSIXct("2024-05-31 19:58:01", tz = "UTC"), "<M8[h]") |>
-#   dtype_to_r("<M8[h]")
+r_to_dtype(as.POSIXct("2024-05-31 19:58:01", tz = "UTC"), "<M8[h]") |>
+  dtype_to_r("<M8[h]")
 ```
 
 Note that you will always need to use an identical `dtype` to
@@ -150,20 +145,20 @@ values.
 ## As `na_value` is not specified for `dtype_to_r()`
 ## and the NA value is masked to 8 bit, the `FALSE`
 ## value is mistakenly interpreted as `NA`
-# r_to_dtype(c(TRUE, NA, FALSE, TRUE), "|b1", na_value = -1) |>
-#   dtype_to_r("|b1")
+r_to_dtype(c(TRUE, NA, FALSE, TRUE), "|b1", na_value = -1) |>
+  dtype_to_r("|b1")
 
 ## This can be fixed by specifying `na_value`
-# r_to_dtype(c(TRUE, NA, FALSE, TRUE), "|b1", na_value = -1) |>
-#   dtype_to_r("|b1", na_value = -1)
+r_to_dtype(c(TRUE, NA, FALSE, TRUE), "|b1", na_value = -1) |>
+  dtype_to_r("|b1", na_value = -1)
 
 ## If the `na_value` is not specified for `dtype_to_r()`,
 ## it will be taken literally
-# r_to_dtype(c(1, NA, 4, 5), "<i4", na_value = -999) |>
-#   dtype_to_r("<i4")
+r_to_dtype(c(1, NA, 4, 5), "<i4", na_value = -999) |>
+  dtype_to_r("<i4")
 
 ## If the `na_value` is specified for `dtype_to_r()`,
 ## it will interpreted as NA
-# r_to_dtype(c(1, NA, 4, 5), "<i4", na_value = -999) |>
-#   dtype_to_r("<i4", na_value = -999)
+r_to_dtype(c(1, NA, 4, 5), "<i4", na_value = -999) |>
+  dtype_to_r("<i4", na_value = -999)
 ```
