--- a/vignettes/blosc-compression.Rmd
+++ b/vignettes/blosc-compression.Rmd
@@ -47,7 +47,7 @@ In that case you need to specify an appropriate data type (`vignette("dtypes")`)
 The example below shows how to encode `numeric()` values as
 little-endian 16 bit floating point data (`"<f2"`) and compresses it.
 
-```{r compress-type, eval=FALSE}
+```{r compress-type}
 ## The line below won't work as the default `typesize` (4) does
 ## not match with the dtype size (2)
 ## blosc_compress(iris$Petal.Length, dtype = "<f2")
@@ -91,7 +91,7 @@ If you don't specify the output type, the decompression routine returns `raw()`
 data. Do you remember the iris length data that we compressed earlier? We
 can simply decompress it by calling `blosc_decompress()`.
 
-```{r decompress, eval=FALSE}
+```{r decompress}
 iris_length1 <- blosc_decompress(compressed_iris)
 head(iris_length1)
 ```
@@ -101,7 +101,7 @@ that we have encoded it as little-endian 16 bit floating point values (`"<f2"`),
 we can specify it as such. Once specified, the function will automatically decode
 the data.
 
-```{r decompress-type, eval=FALSE}
+```{r decompress-type}
 iris_length2 <- blosc_decompress(compressed_iris, dtype = "<f2")
 hist(iris_length2)
 ```
