String support and configure correction

--- a/README.Rmd
+++ b/README.Rmd
@@ -74,6 +74,12 @@ volcano_reconstructed <-
 image(volcano_reconstructed, col = terrain.colors(24L))
 ```
 
+## More details
+
+For more details about Blosc compression and decompression please check
+`vignette("blosc-compression")`. For more information about data type encoding and decoding
+please check `vignette("dtypes")`.
+
 ## Acknowledgements
 
 Big thanks to Simon Urbanek for assisting with setting up the MacOS config.
