--- a/vignettes/dtypes.Rmd
+++ b/vignettes/dtypes.Rmd
@@ -88,10 +88,17 @@ The table below shows an overview of common types, how the are converted from an
 | *=unit        |                        |              | POSIXct stores the object as a       |
 |               |                        |              | `double`. Use with caution           |
 +---------------+------------------------+--------------+--------------------------------------+
-| `<m8[*]`      | 64 bit delta time      |`difftime()`  | Note that the `dtype` stores the time|
+| `<m8[*]`      | 64 bit delta time      | `difftime()` | Note that the `dtype` stores the time|
 |`>m8[*]` where | object                 |              | unit as a 64 bit integer, whereas    |
 | *=unit        |                        |              | `difftime` stores the object as a    |
 |               |                        |              | `double`. Use with caution           |
++---------------+------------------------+--------------+--------------------------------------+
+| `|S*   `      | UTF8 string            | `character()`|                                      |
++---------------+------------------------+--------------+--------------------------------------+
+| `|U*`         | UTF32 string           | `character()`| Note that UTF8 encoding is used in   |
+|               |                        |              | the conversion process. Hence,       |
+|               |                        |              | information may get lost. Use with   |
+|               |                        |              | caution                              |
 +---------------+------------------------+--------------+--------------------------------------+
 
 Some examples of encoding r data to dtypes
@@ -104,6 +111,7 @@ r_to_dtype(c(1.4, 9.8e-6), "<f8")
 r_to_dtype(1+1i, "<c16")
 r_to_dtype(as.POSIXct("2023-06-23 15:32:19", tz = "UTC"), "<M8[ms]")
 r_to_dtype(as.difftime(1, units = "weeks"), "<m8[D]")
+r_to_dtype(c("foo", "bar", "foobar"), "|S6")
 ```
 
 ## Precision of Types
