--- a/README.Rmd
+++ b/README.Rmd
@@ -23,7 +23,7 @@ knitr::opts_chunk$set(
 
 [Blosc](https://www.blosc.org/) is a blocking, shuffling and lossless compression
 algorithm. It is often used to compress n-dimensional structured
-array data. It is applied (amongst others) in the geo-spatial
+array data. It is applied (among others) in the geo-spatial
 [zarr](https://zarr.dev/) file format. This package ports BLOSC compressors and
 decompressors to R.
 
@@ -44,7 +44,7 @@ install.libs("blosc")
 
 ## Example
 
-The blosc package can be uesd to compress `raw` data, but also vectors of
+The blosc package can be used to compress `raw` data, but also vectors of
 other data types. The example below shows how data from the volcano matrix
 can be compressed with blosc.
 
